--- a/CuponWebSite/CuponWebSite/view/SysAdmin.html
+++ b/CuponWebSite/CuponWebSite/view/SysAdmin.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-        <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
     <div id="wrapper">
 
@@ -152,7 +152,6 @@
                 <!-- /.col-lg-12 -->
             </div>
             <div class="row" id="CuponsDiv">
-                           
             </div>
             <!-- /.row -->
             <!-- /.row -->
@@ -218,7 +217,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="#">
+                                <a href="#" onclick="ApproveSocialCupons()">
                                     <div class="panel-footer">
                                         <span class="pull-left">View Details</span>
                                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -270,28 +269,7 @@
                                                     <th>Price</th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>1</td>
-                                                    <td>Mark</td>
-                                                    <td>Otto</td>
-                                                    <td>@mdo</td>
-                                                    <td>33.5</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>2</td>
-                                                    <td>Jacob</td>
-                                                    <td>Thornton</td>
-                                                    <td>@fat</td>
-                                                    <td>43.5</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>3</td>
-                                                    <td>Larry</td>
-                                                    <td>the Bird</td>
-                                                    <td>@twitter</td>
-                                                    <td>15.6</td>
-                                                </tr>
+                                            <tbody id="topBody">
                                             </tbody>
                                         </table>
                                     </div>
@@ -373,41 +351,41 @@
 
             </div>
             <!-- /#wrapper -->
-            </div>
+        </div>
 
-            <!-- /Profile -->
-            <div class="container">
+        <!-- /Profile -->
+        <div class="container">
 
-                <hr>
+            <hr>
 
-                <!-- Footer -->
-                <footer>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <p>Copyright &copy; CupoNoa 2015</p>
-                        </div>
-                    </div>
-                </footer>
-
-            </div>
-            <!-- /.container -->
-</div>
-            <div id="WaitModal" class="modal fade" tabindex="-1" role="dialog" data-keyboard="false"
-                data-backdrop="static">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header" style="text-align: center">
-                            <h3>Searching for Cupons</h3>
-                        </div>
-                        <div class="modal-body">
-                            <div style="height: 200px">
-                                <span id="searching_spinner_center" style="position: absolute; display: block; top: 50%; left: 50%;"></span>
-                            </div>
-                        </div>
-                        <div class="modal-footer" style="text-align: center"></div>
+            <!-- Footer -->
+            <footer>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <p>Copyright &copy; CupoNoa 2015</p>
                     </div>
                 </div>
+            </footer>
+
+        </div>
+        <!-- /.container -->
+    </div>
+    <div id="WaitModal" class="modal fade" tabindex="-1" role="dialog" data-keyboard="false"
+        data-backdrop="static">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="text-align: center">
+                    <h3>Searching for Cupons</h3>
+                </div>
+                <div class="modal-body">
+                    <div style="height: 200px">
+                        <span id="searching_spinner_center" style="position: absolute; display: block; top: 50%; left: 50%;"></span>
+                    </div>
+                </div>
+                <div class="modal-footer" style="text-align: center"></div>
             </div>
+        </div>
+    </div>
     <div class="modal fade" id="CuponModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -453,18 +431,145 @@
                     <button type="button" class="btn btn-default" id="generalModalCloseButton" data-dismiss="modal">Close</button>
                 </div>
             </div>
-            <input type="hidden" id="bussinessIdHidden"/>
+            <input type="hidden" id="bussinessIdHidden" />
         </div>
     </div>
-            <!-- jQuery -->
+    <div class="modal fade" id="AddCuponModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Create New Cupon</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <section class="container">
+                            <div class="container-page">
+                                <div class="col-md-6">
 
-            <!-- Bootstrap Core JavaScript -->
-            <script src="js/bootstrap.min.js"></script>
-            <!-- Metis Menu Plugin JavaScript -->
-            <script src="js/metisMenu.js"></script>
+                                    <div class="btn-group">
+                                        <a class="btn btn-default dropdown-toggle btn-select" data-toggle="dropdown" href="#">Select a Bussiness <span class="caret"></span></a>
+                                        <ul class="dropdown-menu" id="bussiness">
+                                        </ul>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="btn-group">
+                                            <a class="btn btn-default" onclick="AddBussiness">Create New Bussiness</a>
+                                        </div>
+                                    </div>
 
-            <!-- Custom Theme JavaScript -->
-            <script src="js/sb-admin-2.js"></script>
+
+                                    <h3 class="dark-grey">Add Cupon</h3>
+
+                                    <div class="form-group col-lg-12">
+                                        <label>Cupon Name</label>
+                                        <input type="" name="" class="form-control" id="NewCuponName" value="">
+                                    </div>
+
+                                    <div class="form-group col-lg-12">
+                                        <label>Description</label>
+                                        <input type="text" name="" class="form-control" id="NewCuponDescription" value="">
+                                    </div>
+
+                                    <div class="form-group col-lg-6">
+                                        <label>Original Price</label>
+                                        <input type="number" name="" class="form-control" id="NewCuponOriginalPrice" value="">
+                                    </div>
+
+                                    <div class="form-group col-lg-6">
+                                        <label>Cupon Price</label>
+                                        <input type="number" name="" class="form-control" id="NewCuponPrice" value="">
+                                    </div>
+
+                                    <div class="form-group col-lg-6">
+                                        <label>Select Category</label>
+                                        <select id="NewCuponCategory">
+                                            <option value="0">Restaurants</option>
+                                            <option value="1">Shopping</option>
+                                            <option value="2">Health Care</option>
+                                            <option value="3">Office & Electronics</option>
+                                            <option value="4">Vacations</option>
+                                            <option value="5">Pleasure</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group col-lg-6">
+                                        <label>Expiration Date</label>
+                                        <input type="date" id="NewCuponDate" />
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" id="Button1" class="btn btn-primary" onclick="AddCupon()">Add Cupon</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="AddBussinessModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Create New Bussiness</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>Bussiness Name</label>
+                                    <input type="text" name="" class="form-control" id="NewBussinessName" value="">
+                                </div>
+
+                                <div class="form-group">
+                                    <label>Description</label>
+                                    <input type="text" name="" class="form-control" id="NewBussinessDescription" value="">
+                                </div>
+                                <div class="form-group">
+                                    <label>Select Category</label>
+                                    <select id="NewBussinessCategory">
+                                        <option value="0">Restaurants</option>
+                                        <option value="1">Shopping</option>
+                                        <option value="2">Health Care</option>
+                                        <option value="3">Office & Electronics</option>
+                                        <option value="4">Vacations</option>
+                                        <option value="5">Pleasure</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="location">Location</label>
+                                    <input class="form-control" type="text" id="location" />
+                                    <input type="hidden" id="NewBussinessLongitude" />
+                                    <input type="hidden" id="NewBussinessLatitude" />
+                                </div>
+
+                                <div id="mapCanvas" class="text-center"></div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" id="Button2" class="btn btn-primary" onclick="AddBussiness()">Send Bussiness Request</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- jQuery -->
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="js/metisMenu.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/sb-admin-2.js"></script>
 </body>
 
 </html>
