--- a/CuponWebSite/CuponWebSite/view/Home.html
+++ b/CuponWebSite/CuponWebSite/view/Home.html
@@ -229,12 +229,12 @@
 
                                 <div style="margin-bottom: 25px" class="input-group">
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                    <input id="bUsername" type="text" class="form-control" name="username" value="" placeholder="username or email">
+                                    <input id="bUsername" type="text" class="form-control" name="username" value="" placeholder="username or email"/>
                                 </div>
 
                                 <div style="margin-bottom: 25px" class="input-group">
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                    <input id="bPassword" type="password" class="form-control" name="password" placeholder="password">
+                                    <input id="bPassword" type="password" class="form-control" name="password" placeholder="password"/>
                                 </div>
                                 <div class="input-group">
                                     <div class="checkbox">
