--- a/CuponWebSite/CuponWebSite/view/index.html
+++ b/CuponWebSite/CuponWebSite/view/index.html
@@ -49,10 +49,7 @@
                         <a href="#" onclick="SetView('about');">About</a>
                     </li>
                     <li>
-                        <a href="#" onclick="SetView('about');">Services</a>
-                    </li>
-                    <li>
-                        <a href="#" onclick="SetView('about');">Contact</a>
+                        <a href="#" onclick="SetView('contact');">Contact</a>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown">Search<b class="caret"></b></a>
@@ -93,6 +90,19 @@
                                             <div class="divider">
                                             </div>
                                             <a href="#" id="accountView" class="btn btn-primary btn-sm active">View Profile</a>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="">
+                                            <div class="input-group">
+                                                <div id="radioBtn" class="btn-group">
+                                                    <a class="btn btn-primary btn-sm notActive" data-toggle="fun" id="alerts0" data-title="O">Off</a>
+                                                    <a class="btn btn-primary btn-sm notActive" data-toggle="fun" id="alerts1" data-title="L">Location</a>
+                                                    <a class="btn btn-primary btn-sm notActive" data-toggle="fun" id="alerts2" data-title="P">Preferences</a>
+                                                    <a class="btn btn-primary btn-sm notActive" data-toggle="fun" id="alerts3" data-title="C">Combined</a>
+                                                </div>
+                                                <input type="hidden" id="alertType">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -144,37 +154,40 @@
             </div>
 
             <div class="col-md-9">
-                <div class="row carousel-holder">
+                <!--<div class="row carousel-holder">
 
-                    <div class="col-md-12">
-                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="item active">
-                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                        <div class="col-md-12">
+                            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="item active">
+                                        <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                    </div>
+                                    <div class="item">
+                                        <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                    </div>
+                                    <div class="item">
+                                        <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                    </div>
                                 </div>
-                                <div class="item">
-                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
-                                </div>
-                                <div class="item">
-                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
-                                </div>
+                                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                </a>
+                                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                                </a>
                             </div>
-                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left"></span>
-                            </a>
-                            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right"></span>
-                            </a>
                         </div>
-                    </div>
 
+                    </div>-->
+                
+                <div class="row" id="Reccupons_div">
                 </div>
-
+                <h2>New Cupons</h2>
                 <div class="row" id="cupons_div">
                 </div>
 
@@ -190,38 +203,46 @@
         <p>
             You can leave any field empty
         </p>
-        <form class="form-horizontal" role="form">
-            <div class="form-group">
-                <label for="filter">Filter by</label>
-                <select class="form-control">
-                    <option value="6" selected>All Cupons</option>
-                    <option value="0">Resturants</option>
-                    <option value="1">Shopping</option>
-                    <option value="2">Health Care</option>
-                    <option value="3">Office & Electronics</option>
-                    <option value="4">Vacations</option>
-                    <option value="5">Pleasure</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="contain">Bussiness Name</label>
-                <input class="form-control" type="text" />
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-md-6">
-                        <label for="contain">Location</label>
-                        <input class="form-control" type="text" id="location" />
-                    </div>
-                    <div class="col-md-6">
-                        <label for="contain">Radius</label>
-                        <input class="form-control" type="number" id="radius" min="5" max="100" value="10" />
-                    </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="filter">Filter by</label>
+                    <select id="CategorySelector" multiple="multiple" class="form-control">
+                        <option value="6" selected>All Cupons</option>
+                        <option value="0">Resturants</option>
+                        <option value="1">Shopping</option>
+                        <option value="2">Health Care</option>
+                        <option value="3">Office & Electronics</option>
+                        <option value="4">Vacations</option>
+                        <option value="5">Pleasure</option>
+                    </select>
                 </div>
-                <div id="mapCanvas" class="text-center"></div>
+                <div class="form-group">
+                    <label for="contain">Free Text</label>
+                    <input class="form-control" id="SearchText" type="text" />
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary" onclick="SearchByLocation()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-        </form>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <input type="hidden" id="SearchlocationLat" />
+                    <input type="hidden" id="SearchlocationLon" />
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label for="contain">Location</label>
+                            <input class="form-control" type="text" id="Searchlocation" />
+                        </div>
+                        <div class="col-md-6">
+                            <label for="contain">Radius</label>
+                            <input class="form-control" type="number" id="Searchradius" min="5" max="100" value="10" />
+                        </div>
+                    </div>
+                    <div id="mapCanvas" class="text-center"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <button type="submit" class="btn btn-primary" onclick="Search()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
     </div>
     <!-- /search -->
     <div class="container" id="login">
@@ -461,8 +482,6 @@
     </div>
     <!-- /about -->
     <div class="container" id="profile">
-        <h1>Edit Profile</h1>
-        <hr>
         <div class="row">
             <!-- left column -->
             <div class="col-md-3">
@@ -475,7 +494,7 @@
                 <div class="form-group">
                     <label class="col-md-3 control-label"></label>
                     <div class="col-md-8">
-                        <button class="btn btn-primary" id="editBtn" onclick="$('#ChangePassword').hide();$('#profileDetails').show();">Change Password</button>
+                        <button class="btn btn-primary" id="editBtn" onclick="$('#ChangePassword').hide();$('#profileDetails').show();">Edit Profile</button>
                     </div>
                 </div>
                 <div class="form-group">
@@ -544,22 +563,22 @@
                                         <span class="pull-right text-muted small" id="pref1">
                                             <em>X</em>
                                         </span>
-                                    </a> 
+                                    </a>
                                     <a href="#" onclick="UpdatePreference(2);" class="list-group-item">
                                         <i class="fa fa-money fa-fw"></i>Health Care
-                                        <span class="pull-right text-muted small"  id="pref2">
+                                        <span class="pull-right text-muted small" id="pref2">
                                             <em>X</em>
                                         </span>
                                     </a>
                                     <a href="#" onclick="UpdatePreference(3);" class="list-group-item">
                                         <i class="fa fa-money fa-fw"></i>Office & Electronics
-                                        <span class="pull-right text-muted small"  id="pref3">
+                                        <span class="pull-right text-muted small" id="pref3">
                                             <em>X</em>
                                         </span>
                                     </a>
                                     <a href="#" onclick="UpdatePreference(4);" class="list-group-item">
                                         <i class="fa fa-money fa-fw"></i>Vacations
-                                        <span class="pull-right text-muted small"  id="pref4">
+                                        <span class="pull-right text-muted small" id="pref4">
                                             <em>X</em>
                                         </span>
                                     </a>
@@ -603,7 +622,7 @@
                         <div class="col-md-8">
                             <input type="button" class="btn btn-primary" onclick="UpdatePassword();" value="Save Changes">
                             <span></span>
-                            <input type="reset" class="btn btn-default" onclick="SetView('products');" value="Cancel">
+                            <input type="reset" class="btn btn-default" onclick="$('#ChangePassword').hide();" value="Cancel">
                         </div>
                     </div>
                 </div>
@@ -633,7 +652,7 @@
                         <div class="col-md-8">
                             <input type="button" class="btn btn-primary" onclick="UpdateProfile();" value="Save Changes">
                             <span></span>
-                            <input type="reset" class="btn btn-default" onclick="SetView('products');" value="Cancel">
+                            <input type="reset" class="btn btn-default" onclick="$('#profileDetails').hide();" value="Cancel">
                         </div>
                     </div>
                 </div>
@@ -641,6 +660,11 @@
         </div>
     </div>
     <!-- /Profile -->
+    
+    <div class="container" id="contact">
+        
+    </div>
+    <!-- /contact -->
     <div class="container">
 
         <hr>
@@ -720,7 +744,7 @@
             </div>
         </div>
     </div>
-     <div class="modal fade" id="SocialCupon" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="SocialCupon" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -745,7 +769,7 @@
                 <div class="modal-footer" id="Div3">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <input type="button" class="btn btn-primary" onclick="NewSocialCupon();" value="Save Changes" />
-                    
+
                 </div>
             </div>
         </div>
@@ -759,7 +783,15 @@
     <script src="js/cupon.js" type="text/javascript"></script>
     <script type="text/javascript">
         //navigator.geolocation.getCurrentPosition(showdPosition);
+        $('#radioBtn a').on('click', function () {
+            var sel = $(this).data('title');
+            var tog = $(this).data('toggle');
+            $('#' + tog).prop('value', sel);
 
+            $('a[data-toggle="' + tog + '"]').not('[data-title="' + sel + '"]').removeClass('active').addClass('notActive');
+            $('a[data-toggle="' + tog + '"][data-title="' + sel + '"]').removeClass('notActive').addClass('active');
+            ChangeAlertSetting(this.id[this.id.length-1]);
+        })
     </script>
 
 </body>
